# spaghettio

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  index.html  rust-toolchain.toml
crates/core/: Cargo.toml
crates/core/data/: cell-sim-registry.json  recipes.json  short-ids.json
crates/core/examples/: capture_ac_am3_ore.rs  capture_ec_am1_seed_3_8.rs  diagnose_junctions.rs  dump_layout.rs  dump_petroleum_top.rs  inspect_fixture.rs  promote_runtime_cache.rs  replay_region_trace.rs  trace_junction.rs  validate_ac_am3_ore.rs  validate_processing_unit.rs  validate_pu_2s_default.rs
crates/core/src/: analysis.rs  blueprint.rs  blueprint_parser.rs  classify.rs  common.rs  density.rs  fixture.rs  fluid_ports.rs  junction_palette.rs  lib.rs  models.rs  module_policy.rs  netflow.rs  power_wires.rs  recipe_db.rs  sat.rs  short_ids.rs  snapshot.rs  solver.rs  trace.rs  zone_cache.rs
crates/core/src/balancer/: bake.rs  graph.rs  mod.rs  synth.rs  verify.rs
crates/core/src/balancer/placement/: cp_sat.rs  library_lookup.rs  mod.rs
crates/core/src/bus/: balancer.rs  balancer_classify.rs  balancer_generate.rs  balancer_library.rs  balancer_topology.rs  decomposition_search.rs  eviction.rs  ghost_occupancy.rs  ghost_router.rs  inserter_ladder.rs  junction.rs  junction_sat_strategy.rs  junction_solver.rs  lane_order.rs  lane_planner.rs  layout.rs  mod.rs  output_merger.rs  partitioner.rs  placer.rs  region_reimprove.rs  shape_fix.rs  stacking_ctx.rs  template_validate.rs  templates.rs  voider.rs
crates/core/src/bus/cells/: chain.rs  compose.rs  extract.rs  mega.rs  mod.rs  registry.rs
crates/core/src/validate/: belt_flow.rs  belt_structural.rs  fluids.rs  inserters.rs  mod.rs  modules.rs  power.rs  sushi.rs
crates/core/tests/: balancer_cross_validation.rs  balancer_engine_bench.rs  balancer_lane_audit.rs  balancer_tu_audit.rs  cell_composition.rs  cp_sat_round_trip.rs  e2e.rs  junction_fixtures.rs  mode_d_baseline.rs  region_fixtures.rs  sat_fixtures.rs  sat_pins.rs  science_gauntlet.rs  solver_netflow_parity.rs
crates/core/tests/goldens/stress/: README.md  stress_advanced_circuit_partitioned_4s_from_plates.txt  stress_advanced_circuit_partitioned_5s_from_plates.txt  stress_electronic_circuit_22s_from_ore.txt  stress_electronic_circuit_23s_from_ore.txt  stress_electronic_circuit_30s_from_ore.txt  stress_electronic_circuit_35s_from_ore.txt  stress_electronic_circuit_40s_from_ore.txt  stress_electronic_circuit_60s_red_from_ore.txt
crates/core/tests/region_fixtures/: README.md  advanced_circuit_adjacent_cluster_breaks_ug_capped.json  advanced_circuit_iron_plate_trio_capped.json  advanced_circuit_ret_plus_three_trunks.json  electronic_circuit_copper_cable_lost_at_chain_head.json  electronic_circuit_copper_cable_missing_input_chain.json  electronic_circuit_merge_tap_unbalanced_capped.json
crates/core/tests/sat_fixtures/: README.md  ac_seed_10_197_double_corner.json  ec_seed_18_104_corner_turn.json  ec_seed_18_96_iter2.json
crates/sim-harness/: Cargo.toml
crates/sim-harness/baselines/: README.md  automation-science-pack.json  ec10.json  gear10.json  logistic-science-pack.json  military-science-pack.json
crates/sim-harness/src/: baseline.rs  checkdata.rs  fetch.rs  main.rs  manifest.rs  orchestrate.rs  paths.rs  report.rs  scenario.rs
crates/sim-harness/tests/fixtures/: manifest_gear10.json
crates/wasm-bindings/: Cargo.toml
crates/wasm-bindings/src/: lib.rs
(+3375 files in other folders)
