[package]
name = "fucktorio_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
wasm = ["dep:tsify-next", "dep:wasm-bindgen"]

[dependencies]
base64 = "0.22"
flate2 = "1"
indexmap = { version = "2.13.1", features = ["serde"] }
ordered-float = "4"
rayon = "1.10"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
varisat = "0.2"
tsify-next = { version = "0.5", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
# Drop-in Instant replacement: uses `performance.now()` under WASM and
# `std::time::Instant` elsewhere. Fixes 0ms trace timings in the browser.
web-time = "1"

[dev-dependencies]
ntest = "0.9"
sha2 = "0.10"
